--- a/cbt-practice.html
+++ b/cbt-practice.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CBT Practice</title>
@@ -19,11 +21,20 @@
       box-shadow: 0 0 10px gold;
       position: relative;
     }
+    .back-icon {
+      position: absolute;
+      left: 15px;
+      top: 15px;
+      font-size: 1.4rem;
+      color: gold;
+      cursor: pointer;
+    }
     .calculator-icon {
       position: absolute;
       right: 15px;
       top: 15px;
-      font-size: 1.5rem;
+      font-size: 1.4rem;
+      color: gold;
       cursor: pointer;
     }
     .container {
@@ -34,237 +45,355 @@
       border-radius: 10px;
       box-shadow: 0 0 10px gold;
     }
-    .question-box {
-      margin-bottom: 20px;
-    }
-    .option-btn {
-      display: block;
-      width: 100%;
-      background: #222;
-      border: 1px solid gold;
-      color: gold;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .option-btn.selected {
-      background: gold;
-      color: black;
-    }
-    .nav-buttons {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 20px;
-    }
-    .nav-buttons button {
-      padding: 10px 20px;
-      border: none;
-      background: gold;
-      color: black;
-      font-weight: bold;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .timer-box {
-      background: black;
-      color: gold;
-      padding: 10px;
-      border-radius: 8px;
+    .timer {
       text-align: center;
       font-size: 1.3rem;
+      background: #111;
+      padding: 8px;
+      border-radius: 8px;
       margin-bottom: 20px;
-      border: 2px solid gold;
+      border: 1px solid gold;
       width: fit-content;
       margin-left: auto;
       margin-right: auto;
     }
-    .submit-btn {
-      padding: 12px 25px;
-      font-size: 1rem;
-      font-weight: bold;
+
+    /* Calculator Modal */
+    #calculatorModal {
+      display: none;
+      position: fixed;
+      top: 15%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: black;
+      border: 2px solid gold;
+      padding: 20px;
+      z-index: 9999;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 300px;
+      box-shadow: 0 0 15px gold;
+    }
+    #calculatorModal input {
+      width: 100%;
+      padding: 10px;
+      font-size: 1.3rem;
+      margin-bottom: 10px;
+      text-align: right;
+      border-radius: 6px;
+      border: none;
+      background: #111;
+      color: gold;
+    }
+    .calc-btn {
+      width: 22%;
+      margin: 1%;
+      padding: 12px;
+      font-size: 1.2rem;
+      background: #222;
+      color: gold;
+      border: 1px solid gold;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .calc-btn:hover {
       background: gold;
       color: black;
+    }
+    #closeCalc {
+      background: red;
       border: none;
-      border-radius: 8px;
+      color: white;
+      padding: 5px 10px;
+      float: right;
+      margin-top: -10px;
+      margin-right: -10px;
+      border-radius: 50%;
+      font-weight: bold;
       cursor: pointer;
-      margin-top: 20px;
-    }
-    #calculatorBox {
-      display: none;
-      margin-top: 20px;
-      border: 2px solid gold;
-      border-radius: 8px;
-      overflow: hidden;
-      height: 350px;
-    }
-    #calculatorBox iframe {
-      width: 100%;
-      height: 100%;
-      background: black;
     }
   </style>
 </head>
 <body>
   <header>
+    <a href="dashboard.html"><i class="fas fa-arrow-left back-icon" title="Go Back"></i></a>
     CBT Practice - Finance Point
-    <i class="fas fa-calculator calculator-icon" onclick="toggleCalculator()" title="Show Calculator"></i>
+    <i class="fas fa-calculator calculator-icon" onclick="toggleCalculator()" title="Calculator"></i>
   </header>
-  <div class="container">
-    <div id="timer" class="timer-box">Time: 30:00</div>
-    <div id="question-container" class="question-box">Loading question...</div>
-    <div class="nav-buttons">
-      <button onclick="prevQuestion()">Previous</button>
-      <button onclick="nextQuestion()">Next</button>
-    </div>
-    <div style="text-align: center;">
-      <button class="submit-btn" onclick="submitQuiz()">Submit</button>
-    </div>
-    <div id="calculatorBox">
-      <iframe src="https://mathsbot.com/questions/iqa" title="Basic Calculator"></iframe>
+
+  <!-- Calculator Modal -->
+  <div id="calculatorModal">
+    <button id="closeCalc" onclick="toggleCalculator()">×</button>
+    <input type="text" id="calcDisplay" disabled />
+    <div>
+      <button class="calc-btn" onclick="press('7')">7</button>
+      <button class="calc-btn" onclick="press('8')">8</button>
+      <button class="calc-btn" onclick="press('9')">9</button>
+      <button class="calc-btn" onclick="press('/')">÷</button>
+      <button class="calc-btn" onclick="press('4')">4</button>
+      <button class="calc-btn" onclick="press('5')">5</button>
+      <button class="calc-btn" onclick="press('6')">6</button>
+      <button class="calc-btn" onclick="press('*')">×</button>
+      <button class="calc-btn" onclick="press('1')">1</button>
+      <button class="calc-btn" onclick="press('2')">2</button>
+      <button class="calc-btn" onclick="press('3')">3</button>
+      <button class="calc-btn" onclick="press('-')">−</button>
+      <button class="calc-btn" onclick="press('0')">0</button>
+      <button class="calc-btn" onclick="press('.')">.</button>
+      <button class="calc-btn" onclick="calculate()">=</button>
+      <button class="calc-btn" onclick="press('+')">+</button>
+      <button class="calc-btn" onclick="clearCalc()" style="width: 95%">C</button>
     </div>
   </div>
+
+  <script>
+    function toggleCalculator() {
+      const modal = document.getElementById("calculatorModal");
+      modal.style.display = modal.style.display === "block" ? "none" : "block";
+    }
+
+    function press(value) {
+      document.getElementById("calcDisplay").value += value;
+    }
+
+    function clearCalc() {
+      document.getElementById("calcDisplay").value = "";
+    }
+
+    function calculate() {
+      try {
+        const result = eval(document.getElementById("calcDisplay").value);
+        document.getElementById("calcDisplay").value = result;
+      } catch {
+        alert("Invalid expression");
+      }
+    }
+  </script>
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_PROJECT.firebaseapp.com",
-  projectId: "YOUR_PROJECT_ID",
-  storageBucket: "YOUR_PROJECT.appspot.com",
-  messagingSenderId: "YOUR_SENDER_ID",
-  appId: "YOUR_APP_ID"
-};
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-const auth = getAuth(app);
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_PROJECT_ID.appspot.com",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
 
-let questions = [];
-let currentIndex = 0;
-let answers = {};
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-async function loadQuestions() {
-  const querySnapshot = await getDocs(collection(db, "cbtQuestions"));
-  querySnapshot.forEach((doc) => {
-    questions.push(doc.data());
-  });
-  questions = questions.sort(() => 0.5 - Math.random()).slice(0, 30);
-  displayQuestion();
-}
+  let questions = [];
+  let currentIndex = 0;
+  let answers = {};
 
-function displayQuestion() {
-  const q = questions[currentIndex];
-  if (!q) return;
-  const container = document.getElementById("question-container");
-  container.innerHTML = `
-    <h3>Question ${currentIndex + 1}:</h3>
-    <p>${q.question}</p>
-    ${["A", "B", "C", "D"].map(opt => `
-      <button class="option-btn ${answers[currentIndex] === opt ? 'selected' : ''}" onclick="selectAnswer('${opt}')">${opt}. ${q[opt]}</button>
-    `).join("")}
-  `;
-}
+  async function loadQuestions() {
+    try {
+      const snapshot = await getDocs(collection(db, "cbtQuestions"));
+      snapshot.forEach(doc => questions.push(doc.data()));
+    } catch (err) {
+      console.warn("Firestore failed. Using fallback questions.");
+    }
 
-window.selectAnswer = (option) => {
-  answers[currentIndex] = option;
-  displayQuestion();
-  setTimeout(() => {
+    if (questions.length === 0) {
+      questions = [
+        {
+          question: "What is the full meaning of ATM?",
+          A: "Automated Teller Machine",
+          B: "Automatic Tele Machine",
+          C: "Account Transfer Mechanism",
+          D: "Auto Transfer Mode",
+          correct: "A"
+        },
+        {
+          question: "Which is a liability?",
+          A: "Cash",
+          B: "Land",
+          C: "Bank Loan",
+          D: "Salary",
+          correct: "C"
+        },
+        {
+          question: "Central Bank controls?",
+          A: "Commercial Banks",
+          B: "Church Banks",
+          C: "World Bank",
+          D: "Loan Sharks",
+          correct: "A"
+        },
+        {
+          question: "Who prepares the balance sheet?",
+          A: "Engineer",
+          B: "Banker",
+          C: "Accountant",
+          D: "Politician",
+          correct: "C"
+        },
+        {
+          question: "What does BVN stand for?",
+          A: "Bank Value Number",
+          B: "Bank Verification Number",
+          C: "BV Number",
+          D: "Basic Verification Node",
+          correct: "B"
+        }
+      ];
+    }
+
+    questions = questions.sort(() => 0.5 - Math.random());
+    displayQuestion();
+  }
+
+  function displayQuestion() {
+    const q = questions[currentIndex];
+    const container = document.getElementById("question-container");
+    container.innerHTML = `
+      <h3>Question ${currentIndex + 1} of ${questions.length}</h3>
+      <p>${q.question}</p>
+      ${["A", "B", "C", "D"].map(opt => `
+        <button class="option-btn ${answers[currentIndex] === opt ? 'selected' : ''}" onclick="selectAnswer('${opt}')">${opt}. ${q[opt]}</button>
+      `).join("")}
+    `;
+  }
+
+  window.selectAnswer = (opt) => {
+    answers[currentIndex] = opt;
+    displayQuestion();
+    setTimeout(() => {
+      if (currentIndex < questions.length - 1) {
+        currentIndex++;
+        displayQuestion();
+      }
+    }, 200);
+  };
+
+  window.nextQuestion = () => {
     if (currentIndex < questions.length - 1) {
       currentIndex++;
       displayQuestion();
     }
-  }, 250);
-};
+  };
 
-window.nextQuestion = () => {
-  if (currentIndex < questions.length - 1) {
-    currentIndex++;
-    displayQuestion();
-  }
-};
-
-window.prevQuestion = () => {
-  if (currentIndex > 0) {
-    currentIndex--;
-    displayQuestion();
-  }
-};
-
-window.submitQuiz = () => {
-  if (Object.keys(answers).length === 0) {
-    alert("You haven't answered any questions.");
-    return;
-  }
-
-  const container = document.getElementById("question-container");
-  let score = 0;
-  let missed = [];
-
-  questions.forEach((q, i) => {
-    if (answers[i] === q.correct) {
-      score++;
-    } else {
-      missed.push({ number: i + 1, correct: q[q.correct] });
+  window.prevQuestion = () => {
+    if (currentIndex > 0) {
+      currentIndex--;
+      displayQuestion();
     }
-  });
+  };
 
-  const percent = Math.round((score / questions.length) * 100);
-
-  container.innerHTML = `
-    <h2>🎉 CBT Completed</h2>
-    <p><strong>Total Score:</strong> ${score} / ${questions.length} (${percent}%)</p>
-    <p><strong>Missed Questions:</strong></p>
-    <ul style="text-align: left;">
-      ${missed.map(m => `<li>Question ${m.number}: Correct Answer - ${m.correct}</li>`).join('') || '<li>None</li>'}
-    </ul>
-  `;
-
-  document.querySelector(".nav-buttons").style.display = "none";
-  document.getElementById("timer").style.display = "none";
-  document.querySelector(".submit-btn").style.display = "none";
-
-  onAuthStateChanged(auth, user => {
-    if (user) {
-      const result = {
-        userId: user.uid,
-        email: user.email,
-        score,
-        percent,
-        total: questions.length,
-        timestamp: new Date().toISOString()
-      };
-      addDoc(collection(db, "cbt_results"), result)
-        .then(() => console.log("Result saved"))
-        .catch(err => console.error("Failed to save result", err));
+  // Timer Setup
+  let timeLeft = 30 * 60;
+  const timerEl = document.getElementById("timer");
+  const interval = setInterval(() => {
+    const min = Math.floor(timeLeft / 60);
+    const sec = timeLeft % 60;
+    timerEl.textContent = `Time: ${min}:${sec.toString().padStart(2, '0')}`;
+    if (timeLeft <= 0) {
+      clearInterval(interval);
+      submitQuiz();
     }
-  });
-};
+    timeLeft--;
+  }, 1000);
 
-// Timer Logic
-let timeLeft = 30 * 60;
-const timerEl = document.getElementById("timer");
-const timerInterval = setInterval(() => {
-  const minutes = Math.floor(timeLeft / 60);
-  const seconds = timeLeft % 60;
-  timerEl.textContent = `Time: ${minutes}:${seconds.toString().padStart(2, "0")}`;
-  if (timeLeft <= 0) {
-    clearInterval(timerInterval);
-    alert("Time is up! Submitting quiz...");
-    window.submitQuiz();
+  loadQuestions();
+</script>
+<script type="module">
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+  import { getAuth } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+
+  const db = getFirestore();
+  const auth = getAuth();
+
+  window.submitQuiz = async () => {
+    if (Object.keys(answers).length === 0) {
+      alert("You haven't answered any questions.");
+      return;
+    }
+
+    if (!confirm("Are you sure you want to submit your answers?")) return;
+
+    let score = 0;
+    const missed = [];
+
+    questions.forEach((q, i) => {
+      if (answers[i] === q.correct) {
+        score++;
+      } else {
+        missed.push({ number: i + 1, correct: q[q.correct] });
+      }
+    });
+
+    const percent = Math.round((score / questions.length) * 100);
+
+    document.querySelector(".container").innerHTML = `
+      <h2>🎉 CBT Completed</h2>
+      <p><strong>Score:</strong> ${score} / ${questions.length} (${percent}%)</p>
+      <p><strong>Missed Questions:</strong></p>
+      <ul style="text-align: left;">
+        ${missed.map(m => `<li>Question ${m.number}: Correct Answer - ${m.correct}</li>`).join("") || "<li>None</li>"}
+      </ul>
+      <button onclick="location.reload()">Try Again</button>
+    `;
+
+    // Optional: Save result to Firestore
+    try {
+      const user = auth.currentUser;
+      if (user) {
+        await addDoc(collection(db, "cbt_results"), {
+          uid: user.uid,
+          email: user.email,
+          score,
+          percent,
+          total: questions.length,
+          submittedAt: new Date().toISOString()
+        });
+        console.log("✅ Result saved to Firestore");
+      }
+    } catch (err) {
+      console.warn("❌ Failed to save result", err);
+    }
+
+    clearInterval(interval); // Stop timer
+  };
+</script>
+<!-- ✅ Back to Dashboard Icon -->
+<a href="dashboard.html" title="Back to Dashboard" id="backIcon">
+  <i class="fas fa-arrow-left"></i>
+</a>
+
+<style>
+  #backIcon {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    background: gold;
+    color: black;
+    padding: 10px 12px;
+    border-radius: 50%;
+    font-size: 1.1rem;
+    box-shadow: 0 0 8px black;
+    z-index: 9999;
+    text-decoration: none;
+    transition: background 0.3s;
   }
-  timeLeft--;
-}, 1000);
 
-loadQuestions();
+  #backIcon:hover {
+    background: #fff;
+  }
 
-  </script>
-  <script>
-    function toggleCalculator() {
-      const calc = document.getElementById("calculatorBox");
-      calc.style.display = (calc.style.display === "block") ? "none" : "block";
-    }
-  </script>
-</body>
-</html>
+  footer {
+    margin-top: 40px;
+    text-align: center;
+    font-size: 0.85rem;
+    color: gray;
+    padding: 10px;
+    opacity: 0.6;
+  }
+</style>
+
+<!-- ✅ Optional Footer -->
+<footer>
+  &copy; 2025 Finance Point CBT — Powered by OBA
+</footer>
