--- a/cbt-practice.html
+++ b/cbt-practice.html
@@ -137,7 +137,7 @@
 <body>
   <header>
     <i class="fas fa-arrow-left back-btn" onclick="location.href='home.html'"></i>
-    CBT Practice - Finance Point
+    CBT Practice
     <i class="fas fa-calculator calculator-icon" onclick="toggleCalculator()" title="Toggle Calculator"></i>
   </header>
   <div class="container">
